[project]
name = "causal-forcing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.1.1",
    "av==13.1.0",
    "clip",
    "dashscope>=1.25.15",
    "diffusers==0.31.0",
    "dominate>=2.9.1",
    "easydict>=1.13",
    "einops>=0.8.2",
    "flash-attn>=2.8.3",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "ftfy>=6.3.1",
    "huggingface-hub[cli,hf-xet]>=1.8.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "lmdb>=2.2.0",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "numpy==1.24.4",
    "nvidia-cudnn-cu12==9.1.0.70",
    "omegaconf>=2.3.0",
    "onnx>=1.21.0",
    "onnxconverter-common>=1.16.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.6.2",
    "open-clip-torch>=3.3.0",
    "opencv-python>=4.9.0.80",
    "packaging>=26.0",
    "pycocotools>=2.0.11",
    "pydantic==2.10.6",
    "scikit-image>=0.25.2",
    "sentencepiece>=0.2.1",
    "setuptools>=82.0.1",
    "starlette>=1.0.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.20.3",
    "torch==2.5.1",
    "torchao>=0.16.0",
    "torchvision==0.20.1",
    "tqdm>=4.67.3",
    "transformers>=4.49.0",
    "wandb>=0.25.1",
]

[tool.setuptools.packages.find]
include = ["model*", "pipeline*", "trainer*", "wan*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.uv.extra-build-dependencies]
flash-attn = ["setuptools"]
